# um-hackathon

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  idea-presentation.md  idea.md  implementation.md  justfile  render.yaml  tasks.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin.py  assistant.py  buildings.py  deps.py  onboard.py  schemas.py
backend/app/db/: __init__.py  models.py  schema.py  session.py
backend/app/glm/: __init__.py  client.py  prompts.py  tools.py
backend/app/processing/: image.py  pdf.py  pipeline.py
backend/app/profile/: builder.py
backend/app/seed/: demo_autofill.py  reseed_demo.py  seed_demo.py  shah_alam_template.py
backend/app/seed/demo_docs/: menara_demo_bomba_cert.md  menara_demo_listing_pack.md  menara_demo_mbsa_zoning.md  menara_demo_ownership_deed.md
backend/app/workflow/: __init__.py  checkpointer.py  compiler.py  runner.py  state.py
backend/app/workflow/primitives/: __init__.py  collect_form.py  cross_check.py  human_review.py  publish.py  upload_compliance.py  upload_content.py
backend/scripts/: glm_smoke.py
backend/tests/: conftest.py  test_api_minimal.py  test_glm_smoke.py  test_processing.py  test_template_compile.py  test_upload_compliance.py  test_workflow_minimal.py
backend/tests/fixtures/: bomba_cert_fail.txt  bomba_cert_pass.txt  layout_content.txt  mbsa_zoning_pass.txt  ownership_deed_pass.txt
docs/: ONBOARD — Final Pitch Deck v4.html  UMHackathon2026 Frequently Asked Questions.docx  deploy.md  evaluation.md  pitch-deck.md  (+6 more)
(+51 files in other folders)
