[project]
name = "opus-magnum-backend"
version = "0.1.0"
description = "Adaptive onboarding workflow platform — backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "openai>=1.54",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "pypdf>=4.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
ocr = [
    "pytesseract>=0.3.13",
    "Pillow>=10.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
